Update  openapi spec
